--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "element-ui": "^2.4.3",
     "mockjs": "^1.0.1-beta3",
     "postcss-nested": "^3.0.0",
