--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.4.3",
     "mockjs": "^1.0.1-beta3",
     "postcss-nested": "^3.0.0",
+    "prismjs": "^1.15.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
